--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 	<h1>Welcome to Random Dog Pictures</h1>
-	<img id="photo" src="" alt="">
+	<img id="photo" src="https://images.dog.ceo/breeds/stbernard/n02109525_12610.jpg" alt="">
 	<button id="btn">Get Random Dog</button>
 </div>
 
